--- a/resources/less/skins.less
+++ b/resources/less/skins.less
@@ -41,11 +41,11 @@
     }
     // the menu
     .sidebar > .sidebar-menu > li {
-        border-top: 1px solid #fff;
+        //border-top: 1px solid #fff;
         border-bottom: 1px solid @sidebar-light-border;
 
         &:first-of-type {
-            border-top: 1px solid @sidebar-light-border;
+            //border-top: 1px solid @sidebar-light-border;
             > a {
                 border-top: 1px solid #fff;
             }
@@ -232,6 +232,33 @@
 }
 
 
+// DARK Theme
+
+/* skin-dark navbar */
+.skin-dark .navbar {
+  .navbar-variant(@light-blue);
+}
+/* skin-dark logo */
+.skin-dark .logo {
+  .logo-variant(darken(@light-blue, 5%));
+}
+/* skin-dark content header */
+.skin-dark .right-side > .content-header {
+  background: #fbfbfb;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+}
+/* Skin-dark user panel */
+.skin-dark .user-panel {
+
+  > .image > img {
+    border: 1px solid #dfdfdf;
+  }
+
+  > .info, > .info > a {
+    color: @sidebar-light-font;
+  }
+}
+
 /* skin-dark sidebar */
 .skin-dark {
   .sidebar {
@@ -239,11 +266,11 @@
   }
   // the menu
   .sidebar > .sidebar-menu > li {
-    border-top: 1px solid #fff;
+    //border-top: 1px solid #fff;
     border-bottom: 1px solid @sidebar-light-border;
 
     &:first-of-type {
-      border-top: 1px solid @sidebar-light-border;
+      //border-top: 1px solid @sidebar-light-border;
       > a {
         border-top: 1px solid #fff;
       }
